@@ -3,6 +3,10 @@
 - When running ardj locally, use notify-send when track changes.
 - Can now run a background audio player with 'ardj serve`, good for
   desktop usage.
+- Can now tag tracks by artist, example:
+  tag -tagme rock loud --artist="Slick Idiot"
+- Can now tag tracks by file name, example:
+  tag live --filename="%/KMFDM (Live)/%"
 - Fixed broken tests.
 - Fixed handling of / by the built-in web server.
 
